--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,7 @@ catkin_install_python(PROGRAMS
   bin/node.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+  PATTERN ".svn" EXCLUDE)
