--- a/package.xml
+++ b/package.xml
@@ -4,8 +4,8 @@
   <version>0.0.0</version>
   <description>The sim_adapter package</description>
 
-  <author email="vinhloiit1327@gmail.com">Loi Ly</author>
-  <maintainer email="vinhloiit1327@gmail.com">Loi Ly</maintainer>
+  <author email="ssdf@todo.com">SSDF Team</author>
+  <maintainer email="ssdf@todo.com">SSDF Team</maintainer>
 
   <license>MIT</license>
 
